# Onvif-IP-Camera-Mock

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci-cd.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CameraPlayer.tsx  PtzControls.tsx
frontend/src/services/: onvif-client.ts
src/: http_ui.rs  main.rs  onvif.rs  render.rs
