[package]
name = "onvif-ip-camera-mock"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
imageproc = "0.24"
ab_glyph = "0.2"
chrono = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["json"] }
quick-xml = "0.38.4"
tower-http = { version = "0.6.8", features= ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing = "0.1.44"
roxmltree = "0.21.1"
